git context and function intro

--- a/JS-learn/index.html
+++ b/JS-learn/index.html
@@ -14,7 +14,9 @@
         Welcome JS-world
     </div>
     <!--<script src="hello.js"></script>-->
-    <script src="1.data-types.js"></script>
+    <!--<script src="1.data-types.js"></script>-->
+    <!--<script src="2.execution-context.js"></script>-->
+    <script src="3.functions-depth.js"></script>
 </body>
 
 </html>
