--- a/JS-learn/index.html
+++ b/JS-learn/index.html
@@ -13,10 +13,21 @@
     <div class="well">
         Welcome JS-world
     </div>
+
+    <button id="teachBtn" class="btn btn-primary">Teach .js </button> 
+
     <!--<script src="hello.js"></script>-->
     <!--<script src="1.data-types.js"></script>-->
     <!--<script src="2.execution-context.js"></script>-->
-    <script src="3.functions-depth.js"></script>
+    <!--<script src="3.functions-depth.js"></script>-->
+    <!--<script src="4.this-keyword.js"></script>-->
+    <!--<script src="quiz/quiz-1.js"></script>-->
+    <!--<script src="quiz/quiz-2.js"></script>-->
+    <!--<script src="quiz/quiz-3.js"></script>-->
+    <!--<script src="quiz/quiz-4.js"></script>-->
+
+    <script src="quiz/quiz-5.js"></script>
+
 </body>
 
 </html>
