--- a/JS-learn/index.html
+++ b/JS-learn/index.html
@@ -13,9 +13,7 @@
     <div class="well">
         Welcome JS-world
     </div>
-
-    <button id="teachBtn" class="btn btn-primary">Teach .js </button> 
-
+    <button id="teachBtn" class="btn btn-primary">Teach .js </button>
     <!--<script src="hello.js"></script>-->
     <!--<script src="1.data-types.js"></script>-->
     <!--<script src="2.execution-context.js"></script>-->
@@ -25,9 +23,11 @@
     <!--<script src="quiz/quiz-2.js"></script>-->
     <!--<script src="quiz/quiz-3.js"></script>-->
     <!--<script src="quiz/quiz-4.js"></script>-->
-
-    <script src="quiz/quiz-5.js"></script>
-
+    <!--<script src="quiz/quiz-5.js"></script>-->
+    <!--<script src="5.closures.js"></script>-->
+    <!--<script src="6.closures-use1.js"></script>-->
+    <!--<script src="7.closures-use2.js"></script>-->
+    <!--<script src="8.inheritance.js"></script>-->
 </body>
 
 </html>
