--- a/JS-learn/index.html
+++ b/JS-learn/index.html
@@ -28,6 +28,18 @@
     <!--<script src="6.closures-use1.js"></script>-->
     <!--<script src="7.closures-use2.js"></script>-->
     <!--<script src="8.inheritance.js"></script>-->
+    <!--<script src="ques/8.js"></script>-->
+    <!--<script src="9.object-depth.js"></script>-->
+
+    <!--<script src="es6/syntax/1.let-const-keywords.js"></script>-->
+    <!--<script src="es6/syntax/2.arrow-functions.js"></script>-->
+    <!--<script src="es6/syntax/3.function-default-params.js"></script>-->
+    <!--<script src="es6/syntax/4.rest-spread-operators.js"></script>-->
+    <!--<script src="es6/syntax/5.object-literal-enhancements.js"></script>-->
+    <!--<script src="es6/syntax/6.string-interpolation.js"></script>-->
+    <script src="es6/syntax/7.destructuring.js"></script>
+
+    
 </body>
 
 </html>
