es6 new features

--- a/JS-learn/index.html
+++ b/JS-learn/index.html
@@ -30,16 +30,19 @@
     <!--<script src="8.inheritance.js"></script>-->
     <!--<script src="ques/8.js"></script>-->
     <!--<script src="9.object-depth.js"></script>-->
-
     <!--<script src="es6/syntax/1.let-const-keywords.js"></script>-->
     <!--<script src="es6/syntax/2.arrow-functions.js"></script>-->
     <!--<script src="es6/syntax/3.function-default-params.js"></script>-->
     <!--<script src="es6/syntax/4.rest-spread-operators.js"></script>-->
     <!--<script src="es6/syntax/5.object-literal-enhancements.js"></script>-->
     <!--<script src="es6/syntax/6.string-interpolation.js"></script>-->
-    <script src="es6/syntax/7.destructuring.js"></script>
-
-    
+    <!--<script src="es6/syntax/7.destructuring.js"></script>-->
+    <!--<script src="es6/oop/class-syntax.js"></script>-->
+    <!--<script src="es6/type/symbol-data-type.js"></script>-->
+    <!--<script src="es6/colln/iterators-demo.js"></script>-->
+    <!--<script src="es6/colln/map-set-colln.js"></script>-->
+    <!--<script src="quiz/quiz-6.js"></script>-->
+    <script src="es6/promise/promise-api.js"></script>
 </body>
 
 </html>
