--- a/web-app/index.html
+++ b/web-app/index.html
@@ -11,45 +11,48 @@
 
 <body class="container">
     <div class="page-header">wep-app</div>
-
-    <!--<div class="well">Welcome to web-world</div>
-    <button class="btn btn-primary">show</button>
-    <button class="btn btn-danger">hide</button>
-    <hr/>-->
    
-    <!--<ul class="list-group" id="link-box">
-        <li class="list-group-item"><a href="report1.pdf">Link-1</a></li>
-        <li class="list-group-item"><a href="report2.doc">Link-2</a></li>
-        <li class="list-group-item"><a href="report3.pdf">Link-3</a></li>
-    </ul>-->
-
+    <!--
+        <div class="well">Welcome to web-world</div>
+        <button class="btn btn-primary">show</button>
+        <button class="btn btn-danger">hide</button>
+        <hr/>
+    -->
+    <!--
+        <ul class="list-group" id="link-box">
+            <li class="list-group-item"><a href="report1.pdf">Link-1</a></li>
+            <li class="list-group-item"><a href="report2.doc">Link-2</a></li>
+            <li class="list-group-item"><a href="report3.pdf">Link-3</a></li>
+        </ul>
+    -->
     <hr/>
+    <div class="row">
+        <div class="col-md-6 col-sm-6 col-xs-10">
 
-        <div class="row">
-            <div class="col-md-6 col-sm-6 col-xs-10">
+            <form id="post-form" class="well">
+                <div class="form-group">
+                    <label>Email</label>
+                    <input class="form-control" id="email" />
+                </div>
+                <div class="form-group">
+                    <label>Message</label>
+                    <textarea class="form-control" id="message"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">post</button>
+            </form>
 
-                <form id="postForm" class="well">
-                    <div class="form-group">
-                        <label>Email</label>
-                        <input class="form-control" id="email"/>
-                    </div>
-                    <div class="form-group">
-                        <label>Message</label>
-                       <textarea class="form-control" id="message"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">post</button>
-                </form>
-
+            <div id="all-posts">
             </div>
+
+            <hr/>
+
         </div>
-
+    </div>
     <hr/>
-
     <script src="lib/jquery-3.1.1.js"></script>
     <!--<script src="app.js"></script>-->
     <!--<script src="jq-selectors-filters-demo.js"></script>-->
     <script src="jq-small-app.js"></script>
-
 </body>
 
 </html>
