--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -30,21 +30,22 @@
                 <label>{{title}}</label>
                 <button class="destroy"></button>
             </div>
-            <input class="edit" value="{{title}}"/>
+            <input class="edit" value="{{title}}" />
         </li>
         {{/this}}
     </script>
     <script id="footer-template" type="text/x-handlebars-template">
-        <span class="todo-count">{{activeTodoCount}} item left</span>
+        <span class="todo-count">{{activeTodoCount}} {{pluralize}} left</span>
         <ul class="filters">
-            <li><a class="selected">All</a></li>
-            <li><a>Active</a></li>
-            <li><a>Completed</a></li>
+            <li><a href="#/todos/all" {{#eq filter 'all'}} class="selected" {{/eq}}>All</a></li>
+            <li><a href="#/todos/active" {{#eq filter 'active'}} class="selected" {{/eq}}>Active</a></li>
+            <li><a href="#/todos/completed" {{#eq filter 'completed'}} class="selected" {{/eq}}>Completed</a></li>
         </ul>
         {{#if completedTodos}} <button class="clear-completed">Clear Completed</button>{{/if}}
     </script>
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/handlebars/dist/handlebars.js"></script>
+    <script src="node_modules/director/build/director.js"></script>
     <script src="app.js"></script>
 </body>
 
